css/base.css
body {
  font-family: Helvetica, Arial, sans-serif;
  margin: 0px;
  padding: 0px;
  color: black;
  font-size: 10pt;
}

a {
  color: #665;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

input[type='text'] {
  margin: 0px;
}

.tab_modifier {
  position: absolute;
  top: 1px;
  left: 5px;
  background-color: red;
  height: 1px;
  border-radius: 1px;
  opacity: 0.4;
}

#__debug {
  width: 200px;
  background-color: #dd0;
}

#error {
  margin: 5px;
  margin-bottom: 10px;
  background-color: #F9C236;
  width: 100%;
}

#workspace {
  margin: 0px 4px 0px 4px;
  min-width: 410px;
}

#logout {
  float: left;
  font-size: 8pt;
  margin-top: 4px;
}

#loading {
  float: right;
  margin: 0px;
  padding: 0px;
}

.timeline {
  margin: 0px;
  padding: 0px;
  padding-right: 20px;
  max-height: 400px;
  overflow: auto;
  overflow-x: hidden;
}

#update_tweets {
  display: none;
  font-size: 9pt;
  font-weight: bold;
  text-align: center;
  margin-bottom: 3px;
  cursor: pointer;
}

#shortener_area {
  margin: 0px;
  padding: 0px;
  margin-bottom: 2px;
}

#shortener_area input {
  width: 100%;
  z-index: 999;
}

#shortener_button {
  left: 50%;
  position: absolute;
  width: 100px;
  padding: 1px;
  margin-left: -51px;
}

#shortener_button div {
  margin-top: -1px;
  text-align: center;
  cursor: pointer;
  display: none;
}

#shorten_current {
  width: 16px;
  height: 16px;
  position: absolute;
  right: 4px;
  margin-top: -18px;
  cursor: pointer;
}

#compose_tweet_area textarea {
  width: 100%;
  margin: 0px;
  padding: 0px;
}

#compose_tweet_area .footer .chars_left {
  margin-top: 3px;
  float: right;
}

#compose_tweet img {
  margin-top: 3px;
}

#compose_tweet img.left {
  float: left;
  margin-left: 5px;
}

#compose_tweet img.right {
  float: right;
  margin-right: 5px;
}

#compose_tweet {
  font-size: 9pt;
  font-weight: bold;
  margin: 0px;
  padding: 0px;
  text-align: center;
  cursor: pointer;
}

.tweet {
  width: 370px;
  padding: 2px 4px 2px 4px;
}

.tweet .text {
  clear: right;
  padding-top: 2px;
}

.tweet .user {
  float: left;
  font-size: 9pt;
}

.tweet .footer {
  margin: 0px;
  padding: 0px;
  position: relative;
}

.tweet .timestamp {
  font-size: 8pt;
  margin-top: 2px;
  float: left;
}

.tweet .actions {
  float: right;
}

.tweet .actions a {
  font-size: 8pt;
}

.tweet img.profile {
  border: 0;
  margin-right: 4px;
  float: left;
  cursor: pointer;
  height: 48px;
  width: 48px;
}

.tweet img.retweet {
  width: 14px;
  height: 14px;
  margin-right: 2px;
  margin-top: 1px;
  vertical-align: top;
}

.tweet .rt_confirm {
  position: absolute;
  right: 0px;
  top: 15px;
  display: none;
  padding: 5px;
}

.tweet .extra_tweet_data {
  float: right;
  font-size: 8pt;
  min-height: 10pt;
}

/**
    Sexy Combo Skin

	sexy-combo 2.1.3 : http://code.google.com/p/sexy-combo/
*/

div.sexy {
  white-space: nowrap;
  height: 17px;
  border: 0;
  margin: 0;
  margin-bottom: 3px;
  padding: 0;
  width: 107px;
  float: right;
  margin: 7px 8px 0px 0px;
  z-index: 999;
}

div.sexy input {
  margin: 0 0 0 0;
  font:normal 8pt tahoma, arial, helvetica, sans-serif;
  padding:1px 3px;
  height: 14px;
  line-height: 16px;
  vertical-align:middle;
  left: 0px;
  top: 0px;
  width: 90px;

}

div.sexy div.icon {
  width:17px;
  height:17px;
  border: 0;
  cursor:pointer;
  top:0px;
  left: 90px;
}

div.sexy div.list-wrapper {
  left: 0px;
  top: 17px;
  border: 1px solid #D9D9D9;
  background-color: #FFFFFF;
  padding: 0;
  margin: 0;
  width: 105px;
  bottom: auto;
}

div.sexy div.list-wrapper-up {
  top: auto;
  bottom: 17px;
}

div.sexy ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  height: 200px;
}

div.sexy  li {
  padding: 0;
  padding-left: 5px;
  font:normal 8pt tahoma, arial, helvetica, sans-serif;
  background-color: #FFFFFF;
  cursor: pointer;
  margin: 0;
}

